--- a/client/index.html
+++ b/client/index.html
@@ -3,8 +3,15 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1" />
+    <meta name="description" content="Secure Authentication Template built with React and TypeScript">
+    <meta name="theme-color" content="#ffffff">
+    <title>React Secure Auth</title>
+    <link rel="manifest" href="/manifest.json">
+    <link rel="icon" href="generated-icon.png">
+    <link rel="apple-touch-icon" href="generated-icon.png">
   </head>
   <body>
+    <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root"></div>
     <script type="module" src="/src/main.tsx"></script>
   </body>
